<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!--ScrollView is used for supporting landscape mode UI, as when the
    device is rotated, without ScrollView, the buttons will not be
    visible to interact-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!--Using LinearLayout to arrange the elements in a row
        for maintaining simplified approach for simple layout and
        avoids nested layouts, also ScrollView supports single
        child layout-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/gap_20dp"
                android:gravity="center"
                android:padding="@dimen/gap_10dp"
                android:text="@string/app_name"
                android:textSize="@dimen/text26sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/gap_20dp"
                android:hint="@string/email_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_auth_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/gap_20dp"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_auth_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/fragment_auth_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/gap_20dp"
                android:layout_marginStart="@dimen/gap_5dp"
                android:background="@color/colorAccent"
                android:text="@string/auth_header"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text16sp"
                tools:ignore="ButtonStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/gap_20dp"
                android:text="@string/or"
                android:textSize="@dimen/text16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fragment_auth_btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/gap_20dp"
                android:layout_marginEnd="@dimen/gap_5dp"
                android:background="@color/colorPrimary"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text16sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </ScrollView>

</layout>